--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
+              "src/css/styles.css",
               "@angular/material/prebuilt-themes/indigo-pink.css"
             ],
             "scripts": []
@@ -85,7 +85,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
+              "src/css/styles.css",
               "@angular/material/prebuilt-themes/indigo-pink.css"
             ],
             "scripts": []
