--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,13 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "baseUrl": "./src",
+    "paths": {
+      "@components": ["app/components/index.ts"],
+      "@services": ["app/services/index.ts"],
+      "@mat": ["app/mat-angular.ts"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
