--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,10 @@
     ],
     "baseUrl": "./src",
     "paths": {
+      "@interceptors": ["app/interceptors/index.ts"],
       "@components": ["app/components/index.ts"],
       "@services": ["app/services/index.ts"],
+      "@types": ["app/types/index.ts"],
       "@mat": ["app/mat-angular.ts"]
     }
   },
