--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,7 @@
       "@components": ["app/components/index.ts"],
       "@services": ["app/services/index.ts"],
       "@types": ["app/types/index.ts"],
+      "@pipes": ["app/pipes/index.ts"],
       "@mat": ["app/mat-angular.ts"]
     }
   },
