--- a/angular.json
+++ b/angular.json
@@ -4,6 +4,13 @@
   "newProjectRoot": "projects",
   "projects": {
     "vega-client": {
+      "i18n": {
+        "sourceLocale": "en-US",
+        "locales": {
+          "ru": "src/assets/locales/ru.xlf",
+          "cz": "src/assets/locales/cz.xlf"
+        }
+      },
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,6 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "localize": ["ru"],
             "outputPath": "dist/vega-client",
             "index": "src/index.html",
             "browser": "src/main.ts",
