--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,18 +19,17 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
-    "lib": [
-      "ES2022",
-      "dom"
-    ],
+    "lib": ["ES2022", "dom"],
     "baseUrl": "./src",
     "paths": {
       "@interceptors": ["app/interceptors/index.ts"],
       "@components": ["app/components/index.ts"],
       "@services": ["app/services/index.ts"],
+      "@controls": ["app/controls/index.ts"],
       "@config": ["app/config/index.ts"],
       "@types": ["app/types/index.ts"],
       "@pipes": ["app/pipes/index.ts"],
+      "@utils": ["app/utils/index.ts"],
       "@taps": ["app/taps/index.ts"],
       "@mat": ["app/mat-angular.ts"]
     }
