--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,3 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -23,6 +22,7 @@
     "baseUrl": "./src",
     "paths": {
       "@interceptors": ["app/interceptors/index.ts"],
+      "@directives": ["app/directives/index.ts"],
       "@components": ["app/components/index.ts"],
       "@services": ["app/services/index.ts"],
       "@controls": ["app/controls/index.ts"],
