--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@typescript-eslint/parser": "^7.2.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-prettier": "^5.2.1",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -50,6 +50,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "openapi-typescript": "^6.7.4",
     "prettier": "^3.3.1",
+    "prettier-eslint": "^16.3.0",
     "typescript": "~5.4.5"
   }
 }
