--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,7 @@
       "@guard": ["app/guard/index.ts"],
       "@types": ["app/types/index.ts"],
       "@utils": ["app/utils/index.ts"],
+      "@pipes": ["app/pipes/index.ts"],
       "@mat": ["app/mat-angular.ts"]
     }
   },
