--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@angular/platform-browser-dynamic": "^18.2.11",
     "@angular/router": "^18.2.11",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.11",
