--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
-    "lib": ["ES2022", "dom"],
+    "lib": ["ES2022", "dom", "dom.iterable"],
     "baseUrl": "./src",
     "paths": {
       "@components/atoms": ["app/components/atoms/index.ts"],
