--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@angular-devkit/build-angular": "^18.2.11",
     "@angular-eslint/builder": "18.0.1",
     "@angular-eslint/eslint-plugin": "18.0.1",
-    "@angular-eslint/eslint-plugin-template": "18.0.1",
+    "@angular-eslint/eslint-plugin-template": "^18.4.3",
     "@angular-eslint/schematics": "18.0.1",
     "@angular-eslint/template-parser": "18.0.1",
     "@angular/cli": "^18.2.11",
@@ -51,7 +51,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "openapi-typescript": "^6.7.4",
-    "prettier": "^3.3.1",
+    "prettier": "^3.4.2",
     "prettier-eslint": "^16.3.0",
     "typescript": "~5.4.5"
   }
