delete SplitIndicators columns

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,7 @@
       "@constants": ["app/constants/index.ts"],
       "@services": ["app/services/index.ts"],
       "@fractal": ["app/fractal/index.ts"],
+      "@utils": ["app/utils/index.ts"],
       "@types": ["app/types/index.ts"],
       "@mat": ["app/mat-angular.ts"]
     }
